<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/registration_header"
        android:textColor="@color/textColorLight"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/txtHeader"
        android:background="@drawable/shape_divider" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_edit_text"
        android:cursorVisible="true"
        android:fontFamily="casual"
        android:hint="@string/user_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/textColorDark"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUserName"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_edit_text"
        android:cursorVisible="true"
        android:fontFamily="casual"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/textColorDark"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_edit_text"
        android:cursorVisible="true"
        android:fontFamily="casual"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/textColorDark"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_cancel"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/btn_cancel"
        android:text="@string/ok"
        android:textColor="@color/textColorLight"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editPasswordRepeat"
        android:layout_marginBottom="5dp"
        android:text="@string/cancel"
        android:textColor="@color/textColorLight"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />

</RelativeLayout>