<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog">

    <AutoCompleteTextView
        android:id="@+id/editIngredientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_edit_text"
        android:fontFamily="casual"
        android:hint="@string/ingredient"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:padding="5dp"
        android:popupBackground="@color/autoCompleteBkg"
        android:selectAllOnFocus="true"
        android:textColor="@color/textColorDark"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_edit_text"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/textColorDark"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editUnit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIngredientName" />

    <AutoCompleteTextView
        android:id="@+id/editUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_edit_text"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/unit"
        android:inputType="text|textAutoComplete"
        android:maxLines="1"
        android:padding="5dp"
        android:popupBackground="@color/autoCompleteBkg"
        android:selectAllOnFocus="true"
        android:textColor="@color/textColorDark"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintLeft_toRightOf="@+id/editAmount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIngredientName" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/shape_edit_text"
        android:fontFamily="casual"
        android:hint="@string/comment"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:padding="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/textColorDark"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAmount" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/btn_cancel"
        android:text="@string/ok"
        android:textColor="@color/textColorLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_cancel" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/close"
        android:textColor="@color/textColorLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComment" />

</android.support.constraint.ConstraintLayout>