<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="300dp"
    android:background="@drawable/shape_dialog">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:hintEnabled="false" >

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="5dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/textColorDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:hint="@string/new_recipe_name"
            android:background="@drawable/shape_edit_text"
            android:textColorHint="@color/textColorHint"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_ok"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/btn_ok"
        android:text="@string/cancel"
        android:textColor="@color/textColorLight"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilName"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:text="@string/ok"
        android:textColor="@color/textColorLight"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>